2010-09-16  John Swensen  <jpswensen@gmail.com>

	* imwrite.m: Accept more image formats.

2010-09-16  Jaroslav Hajek  <highegg@gmail.com>

	* signal/periodogram.m: Support additional inputs:
	win, nfft, Fs, range. Thanks to Alois Schlögl.

2010-09-13  Ben Abbott <bpabbott@mac.com>

	* plot/gnuplot_drawnow.m: Use new function __gnuplot_has_terminal__().
	* plot/private/__gnuplot_has_terminal__.m: New function.

2010-09-13  Jaroslav Hajek  <highegg@gmail.com>

	* general/common_size.m: Partially rewrite using cellindexmat.

2010-09-13  Jaroslav Hajek  <highegg@gmail.com>

	* general/accumarray.m: Use @vec instead of @(x) x(:) for faster call.

2010-09-11  Jaroslav Hajek  <highegg@gmail.com>

	* pkg/get_forge_pkg.m: Allow underscores in pkg names.

2010-09-08  Ben Abbott <bpabbott@mac.com>

	* plot/__fltk_print__.m, plot/private/__ghostscript__.m,
	plot/__gnuplot_print__.m, plot/__print_parse_opts__.m,
	plot/print.m: Consolidate gs code into print.m.
	* plot/colorbar.m, plot/axis.m,
	plot/private/__actual_axis_position__.m, plot/__go_draw_axes__.m:
	Revert treatment of activepositionproperty from the gnuplot backend.
	* image/image.m: Fix axis limits for single dimension images, add
	demo.

2010-09-07  David Bateman  <dbateman@free.fr>

	* plot/plotyy.m: Don't add the __plotyy_axes__ property to the
	axes handles if iit already exists.

2010-09-06  Petr Mikulik <mikulik@physics.muni.cz>

	* geometry/griddata.m: Allow x, y to be vectors, and z a matrix.

2010-09-03  David Bateman  <dbateman@free.fr>

	* geometry/delaunay.m: Allow the delaunay function to treat
	matrices of the same size for compatibility.

2010-09-03  Ben Abbott <bpabbott@mac.com>

	* image/image.m: Matlab compatible axis limits, add demo.

2010-09-01  Jaroslav Hajek  <highegg@gmail.com>

	* io/dlmwrite.m: Don't fclose if file ID is supplied.

2010-09-01  Jaroslav Hajek  <highegg@gmail.com>

	* io/dlmwrite.m: Support file IDs.

2010-07-07  David Bateman  <dbateman@free.fr>
